<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_latitude"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_latitude">
    </item>
    <item
        android:id="@+id/menu_location_style"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_location_style_deg">
    </item>
    <item
        android:id="@+id/menu_camera_orientation"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_camera_orientation">
    </item>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_about">
    </item>
    
</menu>